Added Sudoku exercise

--- a/pysat/creator.ipynb
+++ b/pysat/creator.ipynb
@@ -43,8 +43,7 @@
     "            #Same square\n",
     "            for x in range(i-(i%3),i-(i%3)+3):\n",
     "                for y in range(j-(j%3),j-(j%3)+3):\n",
-    "                    clauses += [(-value(i,j,k), -value(x,y,k))]\n",
-    "    "
+    "                    clauses += [(-value(i,j,k), -value(x,y,k))]"
    ]
   }
  ],
@@ -65,6 +64,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
